crates/pcb/tests/snapshots/simple__no_fixture.snap
---
source: crates/pcb/tests/simple.rs
expression: output
---
Command: pcb build boards/TestBoard.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Failed to fetch GitHub repo nonexistent/repo@main
   ╭─[ <TEMP_DIR>/boards/TestBoard.zen:2:1 ]
   │
 2 │ load("@github/nonexistent/repo:main/interfaces.zen", "Gpio", "Ground", "Power")
   │ ───────────────────────────────────────┬───────────────────────────────────────  
   │                                        ╰───────────────────────────────────────── Failed to fetch GitHub repo nonexistent/repo@main
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/boards/TestBoard.zen:2:1 (Failed to fetch GitHub repo nonexistent/repo@main)

✗ TestBoard.zen: Build failed
Error: Build failed with errors
